@@ -276,9 +276,6 @@ Global options:
   -help				What you're reading now, dude
   -p | -print			Just print search URL, don't pass to browser
   -o | -o=FILE			Fetch URL and dump to stdout or FILE.
-  -quiet=yes|no			I can't enjoy it with you talking all the time
-				Default: $SURFRAW_quiet
-				Environment: SURFRAW_quiet
   -new[=yes|no]			Start in a new window
 				Default: $SURFRAW_new_window
 				Environment: SURFRAW_new_window
@@ -332,7 +329,6 @@ w3_parse_option () {
 	-escape-url-args=*) setoptyn SURFRAW_escape_url_args	$optarg ;;
 	-g | -graphical)    setoptyn SURFRAW_graphical		yes	;;
 	-help | --help)     do_help=1					;;
-	-quiet=*)	    setoptyn SURFRAW_quiet	    	$optarg ;;
 	-q | -quote)	    setoptyn SURFRAW_quote_args	    	yes	;;
 	-new)		    setoptyn SURFRAW_new_window		yes	;;
 	-new=*)		    setoptyn SURFRAW_new_window		$optarg ;;
@@ -461,9 +457,7 @@ w3_browse_url () {
 			$SURFRAW_browser $SURFRAW_browser_args "$@"
 		 fi
 	fi
-		
     fi
-#    ifno SURFRAW_quiet && echo "Thank you for supporting the Shell Users' Revolutionary Front Rage Against the Web"
 }
 
 quote () {
